--- a/package.json
+++ b/package.json
@@ -43,100 +43,100 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "^8.2.2",
-    "@angular/common": "^8.2.2",
-    "@angular/compiler": "^8.2.2",
-    "@angular/compiler-cli": "^8.2.2",
-    "@angular/core": "^8.2.2",
-    "@angular/forms": "^8.2.2",
-    "@angular/platform-browser": "^8.2.2",
-    "@angular/platform-browser-dynamic": "^8.2.2",
-    "@angular/pwa": "^0.13.9",
-    "@angular/router": "^8.2.2",
-    "@angular/service-worker": "^8.2.2",
+    "@angular/animations": "^8.2.12",
+    "@angular/common": "^8.2.12",
+    "@angular/compiler": "^8.2.12",
+    "@angular/compiler-cli": "^8.2.12",
+    "@angular/core": "^8.2.12",
+    "@angular/forms": "^8.2.12",
+    "@angular/platform-browser": "^8.2.12",
+    "@angular/platform-browser-dynamic": "^8.2.12",
+    "@angular/pwa": "^0.803.14",
+    "@angular/router": "^8.2.12",
+    "@angular/service-worker": "^8.2.12",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^3.0.0",
-    "@clr/angular": "^2.1.1",
-    "@clr/icons": "^2.1.1",
-    "@clr/ui": "^2.1.1",
-    "@nestjs/common": "^6.5.3",
-    "@nestjs/core": "^6.5.3",
+    "@clr/angular": "^2.3.0",
+    "@clr/icons": "^2.3.0",
+    "@clr/ui": "^2.3.0",
+    "@nestjs/common": "^6.8.5",
+    "@nestjs/core": "^6.8.5",
     "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/platform-express": "^6.5.3",
-    "@nestjs/platform-socket.io": "^6.5.3",
+    "@nestjs/platform-express": "^6.8.5",
+    "@nestjs/platform-socket.io": "^6.8.5",
     "@nestjs/swagger": "^3.1.0",
-    "@nestjs/testing": "^6.5.3",
-    "@nestjs/websockets": "^6.5.3",
+    "@nestjs/testing": "^6.8.5",
+    "@nestjs/websockets": "^6.8.5",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "@webcomponents/custom-elements": "^1.2.4",
     "angular2-notifications": "^2.0.0",
     "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.0",
+    "class-validator": "^0.10.2",
     "compression": "^1.7.4",
-    "config": "^3.2.2",
+    "config": "^3.2.4",
     "cookie-parser": "^1.4.4",
-    "core-js": "^3.2.1",
+    "core-js": "^3.3.4",
     "database-updates": "^2.0.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.9",
+    "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "normalize.css": "^8.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.2",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "swagger-ui-express": "^4.0.7",
+    "rxjs": "^6.5.3",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "swagger-ui-express": "^4.1.2",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.2",
-    "@angular/cli": "^8.2.2",
-    "@angular/language-service": "^8.2.2",
-    "@biesbjerg/ngx-translate-extract": "^3.0.2",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "@nestjs/cli": "^6.6.4",
+    "@angular-devkit/build-angular": "~0.803.14",
+    "@angular/cli": "^8.3.14",
+    "@angular/language-service": "^8.2.12",
+    "@biesbjerg/ngx-translate-extract": "^4.2.0",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@nestjs/cli": "^6.11.1",
     "@types/bcrypt": "^3.0.0",
-    "@types/chai": "^4.2.0",
-    "@types/config": "0.0.34",
+    "@types/chai": "^4.2.4",
+    "@types/config": "0.0.35",
     "@types/express": "^4.17.1",
-    "@types/faker": "^4.1.5",
-    "@types/jasmine": "^3.4.0",
-    "@types/jasminewd2": "^2.0.6",
+    "@types/faker": "^4.1.6",
+    "@types/jasmine": "^3.4.4",
+    "@types/jasminewd2": "^2.0.8",
     "@types/mocha": "5.2.7",
-    "@types/node": "~12.7.2",
+    "@types/node": "~12.11.7",
     "@types/supertest": "^2.0.8",
-    "@types/ws": "^6.0.2",
+    "@types/ws": "^6.0.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "codelyzer": "~5.0.1",
-    "concurrently": "^4.1.2",
+    "codelyzer": "~5.2.0",
+    "concurrently": "^5.0.0",
     "cross-env": "^5.2.0",
     "faker": "^4.1.0",
-    "husky": "^3.0.4",
-    "jasmine-core": "~3.4.0",
+    "husky": "^3.0.9",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.2.0",
+    "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "mocha": "^6.2.0",
-    "nodemon": "^1.19.1",
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
     "protractor": "~5.4.2",
     "rimraf": "^3.0.0",
-    "sinon": "^7.4.1",
+    "sinon": "^7.5.0",
     "supertest": "^4.0.2",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.5.3"
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "^3.5.3"
   }
 }
