--- a/package.json
+++ b/package.json
@@ -137,6 +137,6 @@
     "supertest": "^4.0.2",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0",
-    "typescript": "^3.5.3"
+    "typescript": "~3.5.3"
   }
 }
