--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "build": "ng build --prod && tsc -p ./server",
     "test": "ng test --watch=false --no-progress && npm run test:backend",
     "test:frontend": "./node_modules/.bin/istanbul cover ng test --watch=false --no-progress",
-    "test:backend": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ./node_modules/.bin/_mocha ./server/**/*.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:backend-e2e": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
     "test:coverage": "ng test --code-coverage",
     "pree2e": "webdriver-manager update",
@@ -30,7 +29,13 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
     "heroku-prebuild": "npm i -g @angular/cli ts-node",
     "heroku-postbuild": "npm run build",
-    "ng": "ng"
+    "ng": "ng",
+    "lint:backend": "tslint -p ./server/tsconfig.json -c tslint.json",
+    "test:backend": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "husky": {
     "hooks": {
@@ -65,7 +70,6 @@
     "@nestjs/platform-express": "^6.8.5",
     "@nestjs/platform-socket.io": "^6.8.5",
     "@nestjs/swagger": "^3.1.0",
-    "@nestjs/testing": "^6.8.5",
     "@nestjs/websockets": "^6.8.5",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
@@ -103,40 +107,56 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@nestjs/cli": "^6.11.1",
+    "@nestjs/testing": "^6.8.5",
     "@types/bcrypt": "^3.0.0",
-    "@types/chai": "^4.2.4",
     "@types/config": "0.0.35",
     "@types/express": "^4.17.1",
     "@types/faker": "^4.1.6",
     "@types/jasmine": "^3.4.4",
     "@types/jasminewd2": "^2.0.8",
+    "@types/jest": "^24.0.18",
     "@types/mocha": "5.2.7",
     "@types/node": "~12.11.7",
     "@types/supertest": "^2.0.8",
     "@types/ws": "^6.0.3",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "codelyzer": "~5.2.0",
     "concurrently": "^5.0.0",
-    "cross-env": "^5.2.0",
     "faker": "^4.1.0",
     "husky": "^3.0.9",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^24.9.0",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
+    "prettier": "^1.18.2",
     "protractor": "~5.4.2",
     "rimraf": "^3.0.0",
     "sinon": "^7.5.0",
     "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.1.1",
+    "tsconfig-paths": "^3.9.0",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0",
     "typescript": "~3.5.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "server",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node"
   }
 }
