--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ speed-measure-plugin*.json
 /.sass-cache
 /connect.lock
 /coverage
+server/coverage
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
