--- a/package.json
+++ b/package.json
@@ -13,29 +13,24 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "scripts": {
+    "ng": "ng",
     "lint": "ng lint",
-    "clean": "rimraf node_modules package-lock.json",
+    "lint:backend": "tslint -p ./server/tsconfig.json -c tslint.json",
     "prebuild": "ts-node --project ./server/tsconfig.json ./server/modules/jwt-init.ts",
     "build": "ng build --prod && tsc -p ./server",
-    "test": "ng test --watch=false --no-progress && npm run test:backend",
-    "test:frontend": "./node_modules/.bin/istanbul cover ng test --watch=false --no-progress",
-    "test:backend-e2e": "./node_modules/.bin/_mocha ./test/server/**/projects-.spec.ts --require ts-node/register --recursive --check-leaks -t 50000 --exit",
-    "test:coverage": "ng test --code-coverage",
-    "pree2e": "webdriver-manager update",
-    "e2e": "concurrently \"nodemon \" \"ng e2e --configuration ci\" ",
+    "test": "jest",
+    "test:backend": "jest -c ./jest-server.config.js",
     "start": "set NODE_ENV=production&&node ./dist/server/main.js",
     "hmr": "concurrently \"nodemon \" \"ng serve --configuration hmr --progress=false\" ",
     "dev": "concurrently \"nodemon \" \"ng serve --progress=false\"  ",
-    "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
-    "heroku-prebuild": "npm i -g @angular/cli ts-node",
-    "heroku-postbuild": "npm run build",
-    "ng": "ng",
-    "lint:backend": "tslint -p ./server/tsconfig.json -c tslint.json",
-    "test:backend": "jest",
+    "clean": "rimraf node_modules package-lock.json",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json",
+    "heroku-prebuild": "npm i -g @angular/cli ts-node",
+    "heroku-postbuild": "npm run build"
   },
   "husky": {
     "hooks": {
@@ -64,13 +59,13 @@
     "@clr/angular": "^2.3.3",
     "@clr/icons": "^2.3.3",
     "@clr/ui": "^2.3.3",
-    "@nestjs/common": "^6.10.10",
-    "@nestjs/core": "^6.10.10",
+    "@nestjs/common": "^6.10.11",
+    "@nestjs/core": "^6.10.11",
     "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/platform-express": "^6.10.10",
-    "@nestjs/platform-socket.io": "^6.10.10",
+    "@nestjs/platform-express": "^6.10.11",
+    "@nestjs/platform-socket.io": "^6.10.11",
     "@nestjs/swagger": "^4.0.9",
-    "@nestjs/websockets": "^6.10.10",
+    "@nestjs/websockets": "^6.10.11",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "@webcomponents/custom-elements": "^1.3.1",
@@ -84,7 +79,7 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.0",
+    "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "normalize.css": "^8.0.1",
@@ -105,31 +100,21 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@nestjs/cli": "^6.12.9",
-    "@nestjs/testing": "^6.10.10",
+    "@nestjs/testing": "^6.10.11",
     "@types/bcrypt": "^3.0.0",
     "@types/config": "0.0.36",
     "@types/express": "^4.17.2",
     "@types/faker": "^4.1.8",
-    "@types/jasmine": "^3.5.0",
-    "@types/jasminewd2": "^2.0.8",
     "@types/jest": "^24.0.23",
-    "@types/mocha": "5.2.7",
-    "@types/node": "~12.12.17",
+    "@types/node": "~12.12.19",
     "@types/supertest": "^2.0.8",
     "@types/ws": "^6.0.4",
     "codelyzer": "~5.2.0",
     "concurrently": "^5.0.1",
     "faker": "^4.1.0",
     "husky": "^3.1.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
     "jest": "^24.9.0",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "jest-preset-angular": "^8.0.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "protractor": "~5.4.2",
@@ -141,19 +126,5 @@
     "tsconfig-paths": "^3.9.0",
     "tslint": "~5.20.1",
     "typescript": "~3.5.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "server",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node"
   }
 }
