--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,12 +3,15 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
+      "jest",
       "node"
-    ]
+    ],
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "allowJs": true
   },
   "files": [
-    "src/test.ts",
     "src/polyfills.ts"
   ],
   "include": [
@@ -16,4 +19,3 @@
     "src/**/*.d.ts"
   ]
 }
-
